--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.1",
     "cross-fetch": "^3.1.5",
+    "ethers": "^5.6.5",
     "js-sha3": "^0.8.0",
     "next": "12.1.6",
     "react": "18.1.0",
